--- a/DNTScheduler.TestWebApplication/Web.config
+++ b/DNTScheduler.TestWebApplication/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-    <appSettings>
-    <add key="SiteRootUrl" value="http://localhost:10189/Default.aspx" />
+  <appSettings>
+    <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
 
   <system.web>
